[package]
name = "hidlights"
version = "0.1.1"
edition = "2021"
description = "Library for controlling lighting peripherals using USB HID"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "2"
hidparser = "1"
hut = "0.4"
extfn = "0.1"
thiserror = "2.0.12"
bitvec = "1"

[dev-dependencies]
eframe = "0.32"
